# SDKExample

./: .gitignore  CMakeLists.txt  CPUMode.md  Dependencies.md  DependenciesCPU.md  ONNXCPUPlugin.md  README.md  TensorRT.md  cuda.cpp  decoding_encoding.cpp  detect.cpp  detections_and_thresholds.cpp  example_common.h  gpu-inference.cpp  gpu_compilation_tinkering.cpp  gpu_inference.cpp  gpu_quickstart.cpp  inference_tinkering.cpp  inference_tinkering_onnx.cpp  inference_tinkering_openvino.cpp  jpeg.cpp  justfile  main.cpp  onnx.cpp  openvino.cpp  parametrisation.cpp  person-vehicle-anon.cpp  processor_parameters_detail.cpp  quickstart.cpp  small_model.cpp  tensorrt.cpp  tracking.cpp
assets/: README.md
benchmarks/: CMakeLists.txt  benchmark_images.cpp  benchmark_video.cpp  resource_monitor.h
test/: README.md
